# ablog

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
fe/: blog.js  blog.styl  package.json  webpack.config.js
migrations/2020-07-15-082133_posts/: down.sql  up.sql
migrations/2020-07-27-010157_images/: up.sql
src/: api.rs  db.rs  error.rs  images.rs  main.rs  models.rs  schema.rs
static/: blog.css  blog.js
static/errors/: 400.html  404.html  500.html
static/favicons/: browserconfig.xml  site.webmanifest
templates/: hello.stpl  landing.html  post.html
templates/includes/: favicons.html  footer.html  header.html  headers.html  seo_headers.html  social_things.html
