[package]
name = "ablog"
version = "0.1.0"
authors = ["Manuel Aguilera <manuel@manuel.codes>"]
edition = "2018"
license = "LGPL-2.0-or-later"
homepage = "https://github.com/manuelisimo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
dotenv = "0.15"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
sailfish = "0.1.3"
sailfish-macros = "0.1.3"
