[package]
name = "ablog"
version = "0.1.0"
authors = ["Manuel Aguilera <manuel@manuel.codes>"]
edition = "2018"
license = "LGPL-2.0-or-later"
homepage = "https://github.com/manuelisimo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1"
chrono = "0.4.13"
comrak = "0.8"
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0.22"
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
sailfish = "0.1.3"
sailfish-macros = "0.1.3"
