[package]
name = "ablog"
version = "0.1.0"
authors = ["Manuel Aguilera <manuel@manuel.codes>"]
edition = "2018"
license = "LGPL-2.0-or-later"
homepage = "https://github.com/manuelisimo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1"
actix-service = "1.0.5"
actix-web = { version="2", features = ["openssl"]}
actix-web-middleware-redirect-scheme = "2.3"
chrono = "0.4.13"
comrak = "0.8"
diesel = { version = "1.4.4", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15"
env_logger = "0.7"
futures="0.3.5"
log = "0.4"
openssl = { version="0.10" }
sailfish = "0.1.3"
sailfish-macros = "0.1.3"
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0.22"
